gcc/testsuite/g++.dg/parse/dtor7.C
// PR c++/25856

struct A; // { dg-error "forward" } 
A::~A() {} // { dg-error "incomplete" }
